--- a/asset/style.css
+++ b/asset/style.css
@@ -1,17 +1,28 @@
+@font-face {
+    font-family: 'Manjari';
+    src: url(./../fonts/Manjari-Bold.ttf), url(./../fonts/Manjari-Regular.ttf), url(./../fonts/Manjari-Thin.ttf);
+}
+
 html {
     scroll-behavior: smooth;
 }
-body{
+
+body {
     margin: 0;
     font-family: 'Manjari', sans-serif;
 }
-section:nth-child(odd){
+
+section:nth-child(odd) {
     background: #f8faee;
     margin: 0;
     padding: 0;
 }
 
-.navbar{
+img {
+    width: 400px;
+}
+
+.navbar {
     overflow: hidden;
     position: fixed;
     z-index: 999;
@@ -23,21 +34,24 @@ section:nth-child(odd){
     background: #ffc117;
     /* background: #8c8c8ccc; */
 }
-.menu{
+
+.menu {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-.logo{
+
+.logo {
     color: rgb(42, 42, 42);
     font-weight: bold;
     font-size: 22px;
     padding: 10px 30px;
-    margin: 0px 40px 0px 0px;
+    margin: 0px 290px 0px 0px;
     display: inline-block;
     border-radius: 3px;
 }
-.menu-list{
+
+.menu-list {
     padding: 10px 30px;
     margin: 0px;
     display: inline-block;
@@ -45,77 +59,209 @@ section:nth-child(odd){
     cursor: pointer;
     transition: 0.5s;
 }
-.menu-list:hover{
+
+.menu-list:hover {
     background: rgb(241, 255, 0);
     transition: 0.5s;
 }
-.active{
+
+.active {
     background: rgb(241, 255, 0);
     transition: 0.5s;
     font-weight: 600;
 }
-.button{
+
+.button {
     cursor: pointer;
 }
-.menu-list > a{
+
+.menu-list>a {
     padding: 0;
     margin: 0;
     width: 100%;
     color: white;
     text-decoration: none;
 }
-.container{
+
+.container {
     margin: auto;
     width: 970px;
     height: 600px;
     padding: 15px;
 }
-.main-content{
+
+.main-content {
     margin: 53px 0;
     z-index: -1;
 }
-.img-small{
+
+.img-small {
     width: 300px;
 }
-.img-cover{
+
+.img-cover {
     background-image: url(../images/cover.jpg);
     background-size: cover;
-    filter: blur(1px)
 }
-.center{
+
+.center {
     text-align: center;
 }
-.main-heading{
+
+h1 {
+    font-size: 36px;
+}
+
+h2 {
     font-size: 30px;
 }
-.am-context{
-    filter: blur(0px);
+
+h3 {
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-size: 28px;
+}
+
+.am-context {
+    margin-top: 25%;
     letter-spacing: 4px;
 }
 
-.email{
+.email {
     text-decoration: none;
     color: black;
 }
-.non-decoration{
+
+.non-decoration {
     text-decoration: none;
     list-style: none;
 }
-.practice-robot-btn{
+
+.practice-robot-btn {
     padding: 15px 20px;
-    margin: 20px auto;
+    margin: 60px auto;
     width: 300px;
     cursor: pointer;
     text-decoration: none;
     color: black;
     font-weight: bold;
-    border-radius: 2px;
+    border-radius: 3px;
     background: #ffc117;
-    box-shadow: 2px 3px rgb(243, 243, 243);
+    transition: 0.5s;
+    font-size: 22px;
+}
+
+.practice-robot-btn:hover {
+    transition: 0.5s;
+    background: rgb(255, 255, 0);
+}
+
+.shadow {
+    box-shadow: 3px 4px rgb(231, 231, 231);
+}
+
+.four-shadow {
+    box-shadow: 4px 4px 7px 4px rgb(231, 231, 231);
+}
+
+.exp-box {
+    margin: 20px 40px;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 70px;
+    /* border: solid 1px black; */
+    cursor: pointer;
+}
+
+.flip-box {
+    margin: 20px 40px;
+    display: inline-block;
+    border-radius: 3px;
+    background-color: transparent;
+    width: 400px;
+    height: 400px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    /* Remove this if you don't want the 3D effect */
+}
+
+
+/* This container is needed to position the front and back side */
+
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+
+.flip-box:hover .flip-box-inner {
+    transform: rotateY(-180deg);
+}
+
+
+/* Position the front and back side */
+
+.flip-box-front,
+.flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+
+/* Style the front side (fallback if image is missing) */
+
+.flip-box-front {
+    background-color: #bbb;
+    color: black;
+}
+
+
+/* Style the back side */
+
+.flip-box-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+#ais {
+    background: rgb(120, 196, 2)
+}
+
+#orcsoft {
+    background: rgb(57, 135, 186)
+}
+
+footer {
+    background: gray;
+    padding: 12px 0 3px 0;
+}
+
+footer * {
+    display: inline-block;
+}
+
+.icon-footer {
+    color: black;
+    margin: 0 10px;
+    font-size: 28px;
+    text-decoration: none;
     transition: 0.5s;
 }
 
-.practice-robot-btn:hover{
-    transition: 0.5s;
-    background: rgb(241, 255, 0);
+.icon-footer:hover {
+    color: white;
+}
+
+.text-footer {
+    size: 16px;
+    letter-spacing: 2px;
 }
