--- a/asset/style.css
+++ b/asset/style.css
@@ -12,6 +12,10 @@ body {
     font-family: 'Manjari', sans-serif;
 }
 
+section {
+    width: 100%;
+}
+
 section:nth-child(odd) {
     background: #f8faee;
     margin: 0;
@@ -86,7 +90,6 @@ img {
 .container {
     margin: auto;
     width: 970px;
-    height: 600px;
     padding: 15px;
 }
 
@@ -264,4 +267,36 @@ footer * {
 .text-footer {
     size: 16px;
     letter-spacing: 2px;
+}
+
+@media screen and (min-width: 320px) {
+    img {
+        width: 310px;
+    }
+    .flip-box {
+        display: inline-block;
+        margin-left: 0;
+        border-radius: 3px;
+        background-color: transparent;
+        width: 310px;
+        height: 310px;
+        border: 1px solid #f1f1f1;
+        perspective: 1000px;
+        /* Remove this if you don't want the 3D effect */
+    }
+    .container {
+        width: 320px;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .container {
+        width: 520px;
+    }
+}
+
+@media screen and (min-width: 1320px) {
+    .container {
+        width: 970px;
+    }
 }
