--- a/asset/style.css
+++ b/asset/style.css
@@ -270,8 +270,38 @@ footer * {
 }
 
 @media screen and (min-width: 320px) {
+    h1 {
+        font-size: 30px;
+    }
+    h2 {
+        font-size: 16px;
+    }
+    h3 {
+        margin-top: 20px;
+        margin-bottom: 0;
+        font-size: 14px;
+    }
+    h4 {
+        font-size: 14px;
+    }
     img {
         width: 310px;
+    }
+    .logo {
+        padding: 5px 5px;
+        padding-left: 131px;
+        margin: 0px 180px 0px 0px;
+        display: inline-block;
+        border-radius: 3px;
+        text-align: center;
+    }
+    .menu-list {
+        padding: 5px 20px;
+        margin: 0px;
+        display: inline-block;
+        border-radius: 3px;
+        cursor: pointer;
+        transition: 0.5s;
     }
     .flip-box {
         display: inline-block;
@@ -286,12 +316,6 @@ footer * {
     }
     .container {
         width: 320px;
-    }
-    .logo {
-        padding: 10px 30px;
-        margin: 0px 100px 0px 0px;
-        display: inline-block;
-        border-radius: 3px;
     }
     .practice-robot-btn {
         padding: 15px 20px;
