--- a/asset/style.css
+++ b/asset/style.css
@@ -41,8 +41,8 @@ img {
 
 .menu {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 .logo {
@@ -126,8 +126,9 @@ h3 {
 }
 
 .am-context {
-    margin-top: 25%;
+    margin-top: 10%;
     letter-spacing: 4px;
+    padding-bottom: 10%;
 }
 
 .email {
@@ -269,7 +270,26 @@ footer * {
     letter-spacing: 2px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 960px) {
+    .container {
+        width: 600px;
+    }
+    .logo {
+        padding: 5px 0px;
+        margin: 0px 40px 0px 0px;
+        display: inline-block;
+        border-radius: 3px;
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 1320px) {
+    .container {
+        width: 970px;
+    }
+}
+
+@media screen and (max-width: 480px) {
     h1 {
         font-size: 30px;
     }
@@ -287,59 +307,36 @@ footer * {
     img {
         width: 310px;
     }
+    .navbar {
+        height: 30px;
+        padding: 5px 15px;
+        text-align: left;
+    }
     .logo {
-        padding: 5px 5px;
-        padding-left: 131px;
-        margin: 0px 180px 0px 0px;
+        padding: 5px 0px;
+        margin: 0px 0px 0px 0px;
         display: inline-block;
         border-radius: 3px;
         text-align: center;
     }
     .menu-list {
-        padding: 5px 20px;
+        visibility: hidden;
+        padding: 0px;
         margin: 0px;
-        display: inline-block;
-        border-radius: 3px;
-        cursor: pointer;
-        transition: 0.5s;
     }
     .flip-box {
-        display: inline-block;
         margin-left: 0;
-        border-radius: 3px;
-        background-color: transparent;
         width: 310px;
         height: 310px;
-        border: 1px solid #f1f1f1;
-        perspective: 1000px;
-        /* Remove this if you don't want the 3D effect */
     }
     .container {
         width: 320px;
     }
     .practice-robot-btn {
-        padding: 15px 20px;
-        margin: 60px auto;
         width: 200px;
-        cursor: pointer;
-        text-decoration: none;
-        color: black;
-        font-weight: bold;
-        border-radius: 3px;
-        background: #ffc117;
-        transition: 0.5s;
         font-size: 22px;
     }
-}
-
-@media screen and (min-width: 960px) {
-    .container {
-        width: 520px;
-    }
-}
-
-@media screen and (min-width: 1320px) {
-    .container {
-        width: 970px;
+    .main-content {
+        margin-top: 30px
     }
 }
