--- a/asset/style.css
+++ b/asset/style.css
@@ -21,6 +21,21 @@ section:nth-child(odd) {
     margin: 0;
     padding: 0;
 }
+table{
+    margin-top: 60px;
+    border-collapse: collapse;
+}
+th,td{
+    padding: 10px 15px;
+    border: 1px solid black;
+}
+th{
+    background: #ffc117;
+    font-weight: 900px;
+}
+tr:nth-child(even){
+    background: rgb(223, 223, 223);
+}
 
 input{
     margin-left: 20px;
